tests/netgen/grid/errors/grid_number__zero/options.netgen
--grid --grid.number=0 --grid.length=400 --output=net.net.xml
